--- a/app/views/campania_mailer/promocion_comercio.html.erb
+++ b/app/views/campania_mailer/promocion_comercio.html.erb
@@ -48,7 +48,7 @@
       <!-- Enlace para cancelar suscripción -->
       <p style="font-size: 12px; color: #777; margin-top: 30px;">
         ¿No deseas recibir más correos? 
-        <a href="<%= unsubscribe_url(@solicitud.email) %>" style="color: #555;">
+        <a href="<%= unsubscribe_url(@campania.email) %>" style="color: #555;">
           Haz clic aquí para cancelar la suscripción
         </a>.
       </p>
