Añadir puede contestar

--- a/app/views/campania_mailer/promocion_comercio.html.erb
+++ b/app/views/campania_mailer/promocion_comercio.html.erb
@@ -41,6 +41,8 @@
 
       <p><strong>¡Reclame la propiedad y cambie sus datos para que los clientes tengan siempre su información actualizada!</strong></p>
 
+      <p>Si puede contestar este correo, su respuesta será recibida por nuestro equipo.</p>
+
       <p style="font-family: 'Brush Script MT', cursive; font-size: 24px; color: #2c3e50; margin-top: 40px;">
          Infomóvil
       </p>
