Ampliar durcion token

--- a/app/views/solicitud_mailer/enviar_token.html.erb
+++ b/app/views/solicitud_mailer/enviar_token.html.erb
@@ -48,7 +48,7 @@
 
       <p><strong>Si su negocio no cuenta con NIT</strong>, no se preocupe, aún puede registrarlo con la opción de pago y gozar de todos los beneficios anteriormente mencionados.</p>
 
-      <p>Este enlace expirará en <strong>30 minutos</strong>. Si necesita uno nuevo, vuelva a solicitarlo desde la plataforma.</p>
+      <p>Este enlace expirará en <strong>24 horas</strong>. Si necesita uno nuevo, vuelva a solicitarlo desde la plataforma.</p>
 
       <p style="font-family: 'Brush Script MT', cursive; font-size: 24px; color: #2c3e50; margin-top: 40px;">
          Infomóvil
