Reducir texto boton

--- a/app/views/promotor_mailer/informativo.html.erb
+++ b/app/views/promotor_mailer/informativo.html.erb
@@ -15,7 +15,7 @@ Para conocer todos los detalles y resolver sus dudas, le invitamos a participar 
   <a href="<%= @link_reunion %>"
      style="background-color:#4776d3; color:white; padding:12px 24px;
             text-decoration:none; border-radius:6px; font-weight:bold;">
-    Reservar mi reunión informativa
+    Reservar
   </a>
 </p>
 
