--- a/app/views/promotor_mailer/informativo.html.erb
+++ b/app/views/promotor_mailer/informativo.html.erb
@@ -1,4 +1,4 @@
-<p>Estimado <strong><%= @nombre %></strong>,</p>
+<p>Estimad@ <strong><%= @nombre %></strong>,</p>
 
 <p>
 Gracias por su interés en formar parte del <strong>Programa de Promotores de Infomóvil</strong>.
